removing svelvet main node from the div container fixed a lot of the mouse jumping issues; Also Display nodes, centered on screen during initialization

--- a/src/app.css
+++ b/src/app.css
@@ -43,9 +43,7 @@
         border-radius: 38px;
         outline: 10px solid black;
     }
-
-} 
-
+}
 
 :root {
     font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -62,9 +60,9 @@
     -moz-osx-font-smoothing: grayscale;
 }
 
-
-*
-*, *::before, *::after {
+* *,
+*::before,
+*::after {
     /* changes how the width and height of elements are calculated to include padding and border within the total height */
     box-sizing: border-box;
 }
@@ -82,14 +80,11 @@
     font-kerning: auto;
 }
 
-
 html {
-    font-family sans-serif;
     color-scheme: dark light;
-   /* By using `100%` for this property, it prevents mobile browsers from automatically resizing font sizes, maintaining consistency across different devices. */
+    /* By using `100%` for this property, it prevents mobile browsers from automatically resizing font sizes, maintaining consistency across different devices. */
     -webkit-text-size-adjust: 100%;
 }
-
 
 /* removes default margin around the body element */
 body {
@@ -104,7 +99,12 @@ body {
     /* overflow: hidden; */
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     text-wrap: balance;
 }
 
@@ -122,7 +122,10 @@ This CSS rule applies to img, picture, svg, and video elements.
 - display: block; makes these elements behave like block-level elements, which means they start on a new line and take up the full width available.
 - max-width: 100%; ensures that these elements do not exceed the width of their container, helping to maintain responsive design by scaling down the element in smaller viewports.
 */
-img, picture, svg, video {
+img,
+picture,
+svg,
+video {
     display: block;
     max-width: 100%;
 }
@@ -137,13 +140,11 @@ a:hover {
     color: #535bf2;
 }
 
-
 h1 {
     font-size: 3.2em;
     line-height: 1.1;
     text-align: center;
 }
-
 
 @media (prefers-color-scheme: light) {
     :root {
